--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
     <title>MyWeather</title>
 </head>
 
 <body>
-    <h1>hello</h1>
+    <header>MyWeather</header>
+    <div class="container">
+        <div class="search-div">
+            <label for="location"></label>
+            <input type="text" name="location" id="location" required placeholder="ex: Saint Petersburg Florida">
+            <input type="button" value="search" id="submit">
+        </div>
+        <div class="weather-data">
+            <p>sho</p>
+        </div>
+    </div>
+    <footer></footer>
 </body>
 
 </html>
