add more elements to display more info

--- a/index.html
+++ b/index.html
@@ -18,7 +18,25 @@
             <input type="button" value="search" id="submit">
         </div>
         <div class="weather-data">
-            <p>sho</p>
+            <div class="city"></div>
+            <div class="country"></div>
+            <div class="localtime"></div>
+            <div class="condition">
+                <span class="condition-text"></span>
+                <span class="icon"></span>
+            </div>
+            <div class="temp"></div>
+            <div class="feels-like"></div>
+        </div>
+        <div class="temp-switch">
+            <div class="cel">
+                <input type="radio" name="unit" id="cels" checked>
+                <label for="cels">C</label>
+            </div>
+            <div class="fah">
+                <input type="radio" name="unit" id="fahr">
+                <label for="fahr">F</label>
+            </div>
         </div>
     </div>
     <footer></footer>
