add more styles

--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
                     id="icon" src="./assets/github-logo.png" alt="github-icon" /></a>
             source
         </div>
+        <a href="https://www.flaticon.com/free-icons/search" title="search icons">Search icons created by Freepik -
+            Flaticon</a>
+        <div>
+        </div>
+        <div>
+            Photo by <a
+                href="https://unsplash.com/@dagna?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Bjark</a>
+            on <a
+                href="https://unsplash.com/photos/DZ975EkUJH0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+        </div>
+
     </footer>
 </body>
 
